autocomplete z-index fix and code labels changed to R Function

--- a/app/inst/www/styles/default.css
+++ b/app/inst/www/styles/default.css
@@ -1099,7 +1099,9 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
   border: 0;
   background: transparent;
   border-radius: 50%;
-  border: 2px solid rgba(0, 0, 0, 0.2); }
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  margin-left: -10px;
+  margin-top: -5px; }
   .sp-replacer:hover, .sp-replacer.sp-active {
     border-color: rgba(0, 0, 0, 0.6); }
   .sp-replacer .sp-preview {
